# step

./: .gitignore  LICENSE.md  README.md  README.txt  a  copy-build-to-resources.sh  diff.txt  plan.md  pom.xml  release.properties  standalone.xml  step@step.tyndalehouse.com
tools/bespoke_osis2mod/sword-1.9.0/: .gitignore  AUTHORS  CMakeLists.txt  CODINGSTYLE  COPYING  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.cvs  Makefile.in  README  README.svn  aclocal.m4  arminst.sh  autogen.sh  buildtest.cpp  config.h.in  configure  configure.ac  distignore  sword.kdevprj  sword.pc.in  sword.spec.in  usrinst.sh
tools/bespoke_osis2mod/sword-1.9.0/bindings/: CMakeLists.txt  README  flatapi.cpp  usrinst.sh
tools/bespoke_osis2mod/sword-1.9.0/bindings/Android/: README
tools/bespoke_osis2mod/sword-1.9.0/bindings/bcppmake/: MainCLXTest.cpp  MainCLXTest.dfm  MainCLXTest.h  MainTest.cpp  MainTest.dfm  MainTest.h  Makefile.am  clxtest.bpr  clxtest.cpp  sword.bpf  sword.bpr  sword.c  sworddll.bpg  test.cpp
tools/bespoke_osis2mod/sword-1.9.0/bindings/clx/: Sword.pas
tools/bespoke_osis2mod/sword-1.9.0/bindings/corba/: swordorb.idl
tools/bespoke_osis2mod/sword-1.9.0/bindings/cordova/: README  libstrip.sh
tools/bespoke_osis2mod/sword-1.9.0/bindings/csharp/: AssemblyInfo.cs  InstallManager.cs  Manager.cs  Module.cs  NativeMethods.cs  README  Sword.csproj  Sword.sln  sword.snk
tools/bespoke_osis2mod/sword-1.9.0/bindings/gsoap/: Makefile.am  gsoapsword.cpp  gsoapsword.h  testclient.cpp
tools/bespoke_osis2mod/sword-1.9.0/bindings/java-jni/: README
tools/bespoke_osis2mod/sword-1.9.0/bindings/objc/: Info copy.plist  Info.plist  README
tools/bespoke_osis2mod/sword-1.9.0/bindings/swig/: CMakeLists.txt  README  defs.i  encfiltmgr.i  extras.i  filemgr.i  installmgr.i  localemgr.i  multimapwdef.i  osishtmlhref.i  rawcom.i  rawgenbook.i  rawld4.i  rawtext.i  stringmgr.i  swbuf.i  swcacher.i  swcomprs.i  swconfig.i  swfiltermgr.i  swig-perl.doxygen  swkey.i  swld.i  swlocale.i  swlog.i  swobject.i  sword.pl  swtext.i  swversion.i  templates.i  utilxml.i  ztext.i
tools/bespoke_osis2mod/sword-1.9.0/cmake/: FindBZIP2.cmake  FindCLucene.cmake  FindRegex.cmake  FindXZ.cmake  README  build-debug.sh  build-release.sh  configure-iphone-simulator.sh  configure-iphone.sh  install.cmake  muxsources.cmake  options.cmake  sources.cmake
tools/bespoke_osis2mod/sword-1.9.0/cmake/toolchains/: Toolchain-mingw32.cmake  Toolchain-mingw64-x64.cmake  Toolchain-mingw64-x86.cmake  iphone-2.2.1.toolchain-broken  iphone-3.0.toolchain  iphone-3.1.2.toolchain  iphone-3.1.3.toolchain  iphone-3.1.toolchain  iphone-simulator-2.2.1.toolchain-broken  iphone-simulator-3.0.toolchain  iphone-simulator-3.1.2.toolchain  iphone-simulator-3.1.3.toolchain  iphone-simulator-3.1.toolchain
tools/bespoke_osis2mod/sword-1.9.0/doc/: Doxyfile  Makefile.am  QUICKSTART.ubuntu  README  translation-template.conf
tools/bespoke_osis2mod/sword-1.9.0/examples/: Makefile.am  Makefile.in
tools/bespoke_osis2mod/sword-1.9.0/examples/classes/: README  ciphercng.cpp  flatapiinstallmgr.cpp  flatapilookup.c  flatapiparsekey.c  flatapisearch.c  lastVerseInChapter.cpp  simplechapter.cpp  swmgrex.cpp  verseconvert.cpp  versenorm.cpp  verseposition.cpp  verseranges.cpp  versevalid.cpp
tools/bespoke_osis2mod/sword-1.9.0/examples/cmdline/: CMakeLists.txt  Makefile.am  (+10 more)
tools/bespoke_osis2mod/sword-1.9.0/include/: Makefile.am  SwordAPI.pas  bz2comprs.h  canon.h  canon_abbrevs.h  canon_calvin.h  canon_catholic.h  canon_catholic2.h  canon_darbyfr.h  canon_german.h  canon_kjva.h  canon_leningrad.h  canon_luther.h  canon_lxx.h  canon_mt.h  canon_nrsv.h  canon_nrsva.h  canon_null.h  canon_orthodox.h  canon_segond.h  canon_synodal.h  canon_synodalprot.h  canon_vulg.h  cipherfil.h  config.h.in  curlftpt.h  curlhttpt.h  defs.h  echomod.h  encfiltmgr.h  entriesblk.h  femain.h  filemgr.h  flatapi.h  ftplib.h  ftplibftpt.h  ftpparse.h  gbffootnotes.h  gbfheadings.h  gbfhtml.h  (+148 more)
tools/bespoke_osis2mod/sword-1.9.0/lib/: .gitignore  Makefile.am  Makefile.in  README
tools/bespoke_osis2mod/sword-1.9.0/locales.d/: af-utf8.conf  bg-utf8.conf  cs-utf8.conf  cs.conf  de-utf8.conf  es-utf8.conf  fr-utf8.conf  hu-utf8.conf  it-utf8.conf  locales.conf  lt-utf8.conf  lv-utf8.conf  my-utf8.conf  nl-utf8.conf  pl-utf8.conf  pt-utf8.conf  pt_BR-utf8.conf  ru-utf8.conf  ru_RU-utf8.conf  sk-utf8.conf  sl-utf8.conf  vi-utf8.conf  zh_CN-utf8.conf
tools/bespoke_osis2mod/sword-1.9.0/m4/: acx_clucene.m4
tools/bespoke_osis2mod/sword-1.9.0/man/: Makefile.am  README  addld.1  diatheke.1  emptyvss.1  imp2gbs.1  imp2ld.1  imp2vs.1  installmgr.1  mkfastmod.1  mod2imp.1  osis2mod.1  tei2mod.1  vpl2mod.1  vs2osisref.1  vs2osisreftxt.1  xml2gbs.1
tools/bespoke_osis2mod/sword-1.9.0/samples/: Makefile.am
tools/bespoke_osis2mod/sword-1.9.0/scripts/: eligible  merge  mkswordbase  mkswordbase2  mkswordtar
tools/bespoke_osis2mod/sword-1.9.0/tests/: CMakeLists.txt  Makefile.am  Makefile.in  bibliotest.cpp  casttest.cpp  ciphertest.cpp  complzss.cpp  compnone.cpp  compzip.cpp  configtest.cpp  filtertest.cpp  httptest.cpp  icutest.cpp  indextest.cpp  installmgrtest.cpp  introtest.cpp  keycast.cpp  keytest.cpp  ldtest.cpp  lextest.cpp  listtest.cpp  localetest.cpp  mgrtest.cpp  modtest.cpp  osistest.cpp  outputcps.cpp  parsekey.cpp  rawldidxtest.cpp  refsystest.cpp  romantest.cpp  striptest.cpp  swaptest.cpp  swbuftest.cpp  testblocks.cpp  tlitmgrtest.cpp  translittest.cpp  utf8norm.cpp  versekeytest.cpp  versemgrtest.cpp  vtreekeytest.cpp  (+2 more)
tools/bespoke_osis2mod/sword-1.9.0/utilities/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  addcomment.cpp  addgb.cpp  addld.cpp  addvs.cpp  cipherraw.cpp  emptyvss.cpp  gbfidx.cpp  genarray.c  genbookutil.cpp  imp2gbs.cpp  imp2ld.cpp  imp2vs.cpp  installmgr.cpp  json.c  lexdump.c  load_custom_versification.cpp  mkfastmod.cpp  mod2imp.cpp  mod2osis.cpp  mod2vpl.cpp  mod2zmod.cpp  modwrite.cpp  no13.c  osis2mod.cpp  step2vpl.cpp  stepdump.cpp  sub.c  tei2mod.cpp  treeidxutil.cpp  vpl2mod.cpp  vs2osisref.cpp  vs2osisreftxt.cpp  xml2gbs.cpp
(+24694 files in other folders)
