swmandir = $(top_srcdir)/man

man_MANS =  $(swmandir)/addld.1
man_MANS += $(swmandir)/diatheke.1
man_MANS += $(swmandir)/emptyvss.1
man_MANS += $(swmandir)/imp2gbs.1
man_MANS += $(swmandir)/imp2ld.1
man_MANS += $(swmandir)/imp2vs.1
man_MANS += $(swmandir)/installmgr.1
man_MANS += $(swmandir)/mkfastmod.1
man_MANS += $(swmandir)/mod2imp.1
man_MANS += $(swmandir)/osis2mod.1
man_MANS += $(swmandir)/tei2mod.1
man_MANS += $(swmandir)/vpl2mod.1
man_MANS += $(swmandir)/vs2osisref.1
man_MANS += $(swmandir)/vs2osisreftxt.1
man_MANS += $(swmandir)/xml2gbs.1
